fix need to location and align components #280

--- a/packages/custom/icu/public/assets/css/_detailspane.scss
+++ b/packages/custom/icu/public/assets/css/_detailspane.scss
@@ -331,12 +331,13 @@ $tab-content-height: calc(100% - #{$description-height} - #{$switcher-height} - 
                     margin-left: 10px;
 
                     .avatar-placeholder {
-                        background: url(/icu/assets/img/user.png) no-repeat scroll left center;
+                        background: url(/icu/assets/img/user.png) no-repeat scroll;
                         height: 26px;
                         padding: 5px 0 5px 35px;
                         color: $light-grey-placeholder;
                         display: table;
                         width: 100%;
+                        background-position: left;
                     }
 
                 }
@@ -394,9 +395,10 @@ $tab-content-height: calc(100% - #{$description-height} - #{$switcher-height} - 
                     margin-left: 10px;
                     padding: 17px 0;
                     padding-left: 25px;
-                    background: url(/icu/assets/img/calendar.png) no-repeat scroll left center;
+                    background: url(/icu/assets/img/calendar.png) no-repeat scroll;
                     cursor: pointer;
                     outline: none;
+                    background-position: left center;
                 }
             }
 
