--- a/packages/custom/icu/public/assets/css/_middlepane.scss
+++ b/packages/custom/icu/public/assets/css/_middlepane.scss
@@ -221,6 +221,7 @@
             height: 27px;
             padding-left: 19px;
             background: url('/icu/assets/img/status.png') no-repeat 15% center;
+            background-position: left 10% center;
             
             &:hover{
                  box-shadow: 0px 0px 0px 2px #FFB435;
