--- a/packages/custom/icu/public/assets/css/_tabs-activities.scss
+++ b/packages/custom/icu/public/assets/css/_tabs-activities.scss
@@ -62,6 +62,12 @@ $activityListDefaultMaxH: 80px;
 
                     .activity-details {
                         font-weight: 100;
+                        & > span {
+                            font-size: 0;
+                            & > span {
+                            font-size: 14px;
+                        }
+                        }
                     }
                     .activity-date {
                         color: $light-grey-placeholder;
